# jota-voice

./: .env.local.example  .gitignore  README.md  bootstrap.sh  config.example.yaml  config_mac.yaml  deploy.sh  install.sh  jota-env.example.sh  jota-voice
boot/: hook.sh  sles-source-loader.sh  start.sh  supervisord.conf.tpl
boot/lib/: android.sh  notify.sh
client/: audio_capture.py  config.py  display_client.py  event_bus.py  gateway_client.py  oww_client.py  playback_engine.py  state_machine.py  test_audio_sounddevice.py  test_config_control.py  test_control_server.py  test_display_client.py  test_event_bus.py  test_gateway_client.py  test_notification_tone.py  test_playback_engine.py  test_registry.py  test_state_machine.py  voice_client.py
client/app/: control_server.py  display_client.py  playback_engine.py  voice_client.py
client/backends/: __init__.py  audio_base.py  audio_capture.py  audio_sounddevice.py  audio_termux.py  display_base.py  display_http.py  display_null.py  errors.py  (+7 more)
devices/: example.env
docs/: ROADMAP.md  arquitectura.md  fase-2-briefing.md  kiosk.md  nginx.md  openclaw-integracion.md  parches-movil.md  pendientes.md  spec.md
install/: 01-packages.sh  02-hosts.sh  03-venv.sh  04-oww.sh  05-supervisord.sh  06-configs.sh  07-boot.sh  08-jota-display.sh  99-smoke-test.sh
install/macos/tflite_runtime_shim/: pyproject.toml
install/macos/tflite_runtime_shim/tflite_runtime/: interpreter.py
kiosk/: adb_screen.py  deploy.sh  index.html  kiosk_server.py  manifest.json  server.py
lib/: output.sh  yaml.sh
scripts/: monitor_gateway.sh
(+86 files in other folders)
